fi-viz/src/pages/about/about.css
.about-container {
    margin: 20px;
    margin-right: 20%;
    margin-left: 20%;
    align-content: center;
    background-color: white;
}

.center-text {
    text-align: center;
}

.red {
    color: #9D1212              !important;
}

.white {
    color: white;
}

.black {
    color: #000000
}

.border {
    border: 1px solid rgba(169, 176, 183, .3);
}

